# DikePole

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  DikePole.html  README.md  bsconfig.json  login.sh  package-lock.json  package.json
Story/: Loca Deserta_harlowe_07_02_19.html  LocaDeserta.html  LocaDeserta.json  locadesera-eng8.ink  locadesera-eng8.ink.json  locadeserta-eng8.1.ink  locadeserta-eng8.1.ink.json  locadeserta.ink  locadeserta.ink.json  locadeserta_eng.ink  locadeserta_eng.ink.json
Story/Diagram/: locadeserta.dia  locadeserta0.dia
Story/gladstories/: hotinska_riznya.json  krivava_pastka.json  last_battle_at_berestechko.json  zustrich_v_stepu.json
db/: dev.db
functions/: .firebaserc
gladstories/: README.md  bsconfig.json  package-lock.json  package.json
gladstories/src/: Index.re  (+14 more)
locadeserta/: .flutter-plugins-dependencies  .gitignore  README.md  analysis_options.yaml  build_native.sh  copy_to_web.sh  local.properties  pubspec.yaml
react-app/: package.json
regladstories/: Api.re  App.re  GladStory.re  MetaStoryView.re  dune  hotin_massacre.json  package.json
replit/: package.json
rust/: Cargo.toml  build.sh  build_release.sh  index.html  twinery.json
rust/pkg/: dikepole.js  dikepole_bg.d.ts  dikepole_bg.wasm
rust/src/: lib.rs  story.rs
server/: .gitignore  README.md  dev.db  pubspec.yaml  server.js
sloboda/: .gitignore  README.md  analysis_options.yaml  build_native.sh  copy_to_web.sh  pubspec.yaml
src/: Background.re  Db.bs.js  Db.re  Index.bs.js  Index.re  Story.bs.js  Story.re  TreeComponent.bs.js  TreeComponent.re  index.html
(+546 files in other folders)
