[package]
name = "dikepole"
version = "0.1.0"
authors = ["Dmytro Gladkyi <gladimdim@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.2.3"
wasm-bindgen = "^0.2.29"
web-sys = "^0.3.6"
serde = { version = "^1.0.83", features = ['derive'] }
serde_json = "^1.0.33"

futures = "^0.1.20"

[profile.release]
lto = true
opt-level = 3